--- a/tintuc.html
+++ b/tintuc.html
@@ -57,8 +57,7 @@
                     result.style.backgroundColor = '#f5f5f5';
                     result.style.border = '1px solid #4654e1';
                 } else {
-                    result.style.backgroundColor = '';
-                    result.style.border = '';
+                    alert("Không tìm thấy từ khóa!")
                 }
             });
         });
