--- a/tintuc.html
+++ b/tintuc.html
@@ -34,6 +34,9 @@
               color: black;
               margin-left: 80px;
             }
+            #chinhtri {
+                margin-top: 60px;
+            }
             </style>
     </head>
     <body>
